syntax = "proto3";

package user_service;
option go_package = "gitlab.com/zimtox/auth_service/generated/user_service";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "user_service/user_types.proto";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreatedResponse) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }

    rpc GetUserById(GetById) returns (User) {
        option (google.api.http) = {
            get: "/v1/users/{id}"
        };
    }

    rpc GetUsers(GetAllRequest) returns (UserList) {
        option (google.api.http) = {
            get: "/v1/users"
        };
    }

    rpc UpdateUserById(UpdateUser) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/users/{id}"
            body: "*"
        };
    }

    rpc DeleteUser(GetById) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/users/{id}"
        };
    }
}